objects/Blueprint__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentJsonId__c</fullName>
        <label>AttachmentJsonId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Page__c</fullName>
        <formula>HYPERLINK(&quot;https://andersonadvisors.my.salesforce.com/&quot; +  AccountId__c , &quot;Client Page&quot;)</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreparedBy__c</fullName>
        <label>PreparedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Parties_Entities_Id__c</fullName>
        <label>Related Parties Entities Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Entities_ID__c</fullName>
        <label>Task Entities ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Blueprint_Id__c</fullName>
        <label>Unique_Blueprint_Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Blueprint</label>
    <listViews>
        <fullName>Nolan_Daigle_Blueprint</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Blueprint_Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blueprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>